# qdrant-hybrid-pipeline-example

./: .docker-compose.yml  .gitignore  README.md  pyproject.toml  run_evals.sh  run_pipeline.sh  search_ads.py  wiki_cohere.py
configs/: baseline_experiment.yml  e5large_bm25.yml  e5large_bm25_colbert.yml  e5large_minicoil.yml  paraphrase_bm25.yml  paraphrase_bm25_colbert.yml  paraphrase_minicoil.yml
scripts/: search_ads.py
src/scripts/: evaluate_results.py  search_ads.py
